--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,10 +10,10 @@
             "type": "godot",
             "request": "launch",
             "project": "${workspaceFolder}",
-            "port": 6007,
-            "address": "http://127.0.0.1",
-            "launch_game_instance": true,
-            "launch_scene": false
+            // "port": 6007,
+            // "address": "127.0.0.1",
+            // "launch_game_instance": true,
+            // "launch_scene": false
         }
     ]
 }
