conf(project): update project to new godot version
Project was created in 4.2 and is now compatible with 4.5. This introduces the new .uid file that are allegedly more stable. Also adapt the project vscode config to windows.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
     "godot_tools.editor_path": "/usr/bin/godot",
-    "godotTools.lsp.serverPort": 6007
+    "godotTools.lsp.serverPort": 6005,
+    "godotTools.editorPath.godot4": "C:\\Users\\adech\\Apps\\Godot_v4.5.1-stable_win64.exe\\Godot_v4.5.1-stable_win64.exe",
+    "files.exclude": {
+        "**/*.gd.uid": true,
+        ".godot/": true,
+    }
 }
